<?xml version="1.0"?>
<package>
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The simulation package</description>

  <author>WVU Interactive Robotics Laboratory</author>
  <license>BSD</license>
  <url>https://github.com/wvu-irl/cataglyphis3-software</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>messages</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_loader</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
