<?xml version="1.0"?>
<package>
  <name>slam</name>
  <version>0.0.0</version>
  <description>The slam package</description>

  <author>WVU Interactive Robotics Laboratory</author>
  <license>BSD</license>
  <url>https://github.com/wvu-irl/cataglyphis3-software</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <!--build_depend>pcl_conversions</build_depend-->
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>messages</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_generation</run_depend>
  <!--run_depend>pcl_conversions</run_depend-->
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_loader</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
